<resources>
    <string name="app_name">Guess</string>
    <string name="please_enter_a_number">Please enter a number (1-10)</string>
    <string name="ok">OK</string>
    <string name="yes_you_got_it">Yes, you got it</string>
    <string name="bigger">Bigger</string>
    <string name="smaller">Smaller</string>
    <string name="dialog_title">Message</string>
    <string name="excellent_message">Excellent! The number is</string>
</resources>
